Converted to spring boot, because _that's_ what we make easy.